# apis-service/main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"local_packages/api"
+	"local_packages/api/services"
 	"local_packages/database"
 
 	"github.com/jackc/pgx/v4/pgxpool"
@@ -13,22 +14,33 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
 )
 
+// @title API Title
+// @description This is a sample server for a pet store.
+// @version 1.0
+// @termsOfService http://terms-of-service-url.com
+// @contact name Developer Support email support@email.com
+// @license name Apache 2.0 url http://www.apache.org/licenses/LICENSE-2.0.html
+// @host localhost:5000
+// @BasePath /
+// @schemes http https
 func main() {
 	var gorm *gorm.DB
 	var dbpool *pgxpool.Pool
 	dbpool, gorm = database.InitDB()
-	svc := api.NewService(dbpool, gorm)
+	svc := services.NewService(dbpool, gorm)
 
 	router := gin.Default()
 	api.SetupRoutes(router, svc)
 
-
+	router.StaticFile("/koko", "./docs/swagger.json")
+	router.StaticFile("/swagger/doc.json", "./docs/swagger.json")
 	
     // URL to the Swagger JSON (it's generated by swag init command)
-    swaggerURL := ginSwagger.URL("http://localhost:8000/swagger/doc.json")
-    router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, swaggerURL))
+	swaggerURL := ginSwagger.URL("http://localhost:5000/swagger/doc.json")
 
-	router.Run()
+	router.GET("/swagger-ui/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, swaggerURL))
+
+	router.Run(":5000")
 }
 
 
